Fix full height on safari for iOS

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 	background-color: #e8e2d1;
 	color: black;
 	padding: 20px;
+	overflow: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -28,7 +29,7 @@ body {
 	display: grid;
 	grid-auto-flow: column;
 	width: calc(100vw - 40px);
-	height: calc(100vh - 40px);
+	height: calc(100svh - 40px);
 	grid-template-columns: fit-content(120px) auto;
 	border: 0.5px solid black;
 }
@@ -55,12 +56,12 @@ body {
 #nav-wrapper {
 	grid-column: 1 / span 1;
     grid-row: 2 / span 1;
-    height: calc(100vh - 100px);
+    height: calc(100svh - 100px);
 }
 #content {
 	grid-column: 2 / span 1;
     grid-row: 2 / span 1;
-    height: calc(100vh - 100px);
+    height: calc(100svh - 100px);
     
     overflow-y: scroll;
 }
